0025712: Non-deterministic behavior of ShapeFix_Solid

Test-case for issue #25712